--- a/src/components/content/content.module.css
+++ b/src/components/content/content.module.css
@@ -1,6 +1,10 @@
 .padding {
-	padding: var(--padding-base) 0;
-	margin: auto;
+	padding-top: var(--padding-base);
+	/* margin: auto; */
+	min-height: 100%;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
 }
 
 .maxWidth {
