--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@ body {
 	margin: 0;
 }
 
+#root {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
 /* width */
 ::-webkit-scrollbar {
 	width: 10px;
